--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
-    "gulp-nodemon": "^2.4.2"
+    "gulp-nodemon": "^2.4.2",
+    "pg": "^7.9.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^5.2.6"
   },
   "devDependencies": {
     "eslint": "^5.15.3"
