--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "nyc mocha"
+    "test": "nyc mocha --exit"
   },
   "keywords": [
     "heroku",
@@ -26,6 +26,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bunyan": "^1.8.12",
     "express": "^4.16.4",
     "gulp": "^4.0.0",
     "gulp-nodemon": "^2.4.2",
@@ -36,6 +37,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "dotenv": "^7.0.0",
     "eslint": "^5.15.3",
     "mocha": "^6.0.2",
     "nyc": "^13.3.0"
