--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
-    "test": "nyc mocha --exit"
+    "test": "nyc mocha --exit",
+    "docs:build": "documentation build src/** -f md -o docs"
   },
   "keywords": [
     "heroku",
@@ -39,6 +40,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
+    "documentation": "^9.3.1",
     "dotenv": "^7.0.0",
     "eslint": "^5.15.3",
     "eslint-plugin-security": "^1.4.0",
