--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "helmet": "^3.16.0",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^5.2.6"
+    "sequelize": ">=5.3.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
