heroku ci tests

--- a/app.json
+++ b/app.json
@@ -4,18 +4,14 @@
       "addons": [
         {
           "plan": "heroku-postgresql",
-          "as": "HEROKU_POSTGRESQL_ORANGE",
-          "options": {
-            "version": "10"
-          }
-        },
-        {
-          "plan": "heroku-postgresql",
           "options": {
             "version": "10"
           }
         }
-      ]
+      ],
+      "scripts": {
+        "test-setup": "psql $DATABASE_URL -f seed.sql"
+      }
     }
   }
 }
