--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "helmet": "^3.16.0",
     "pg": "^7.9.0",
     "pg-hstore": "^2.3.2",
-    "sequelize": ">=5.3.0"
+    "sequelize": "^6.0.0",
+    "throng": "^4.0.0"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -44,7 +45,7 @@
     "dotenv": "^7.0.0",
     "eslint": "^5.15.3",
     "eslint-plugin-security": "^1.4.0",
-    "mocha": ">=6.1.3",
+    "mocha": "^6.1.4",
     "nyc": "^14.0.0"
   }
 }
